2014-05-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60999
	* g++.dg/cpp0x/nsdmi-template9.C: New.
	* g++.dg/cpp0x/nsdmi-template10.C: Likewise.

2014-05-04  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60965
	* g++.dg/ipa/devirt-31.C: New testcase.
	* g++.dg/ipa/devirt-11.C: Adjust testcase.

2014-05-04  Peter Bergner  <bergner@vnet.ibm.com>

	* gcc.target/powerpc/pack02.c (dg-options): Add -mhard-float.
	(dg-require-effective-target): Change target to powerpc_fprs.
	* gcc.target/powerpc/pack03.c (dg-options): Add -mhard-dfp.
	(dg-require-effective-target): Change target to dfprt.

2014-05-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR tree-optimization/60930
	* gcc.dg/torture/pr60930.c:  New test.

2014-04-30  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Back port from mainline
	2014-04-24  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/pack01.c: New test to test the new pack and
	unpack builtin functionss for 128-bit types.
	* gcc.target/powerpc/pack02.c: Likewise.
	* gcc.target/powerpc/pack03.c: Likewise.
	* gcc.target/powerpc/extend-divide-1.c: New test to test extended
	divide builtin functionss.
	* gcc.target/powerpc/extend-divide-2.c: Likewise.
	* gcc.target/powerpc/bcd-1.c: New test for the new BCD builtin
	functions.
	* gcc.target/powerpc/bcd-2.c: Likewise.
	* gcc.target/powerpc/bcd-3.c: Likewise.
	* gcc.target/powerpc/dfp-builtin-1.c: New test for the new DFP
	builtin functionss.
	* gcc.target/powerpc/dfp-builtin-2.c: Likewise.

2014-04-29  Pat Haugen  <pthaugen@us.ibm.com>

	Backport from mainline
	2014-04-17  Pat Haugen  <pthaugen@us.ibm.com>

	* gcc.target/powerpc/ti_math1.c: New.
	* gcc.target/powerpc/ti_math2.c: New.

2014-04-29  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/60971
	* c-c++-common/turtore/pr60971.c: New test.

2014-04-26  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/tree-ssa/alias-30.c (dg-options): Dump only fre1 details.
	* gcc.dg/vect/pr60505.c: Cleanup vect tree dump.